# python-project-51

./: Makefile  README.md  codecov.yml  page_loader.py  pyproject.toml  setup.cfg
page_loader/: __init__.py  cli.py  exceptions.py  htmlutils.py  loader.py  logconf.py  urlutils.py
page_loader/scripts/: main.py
tests/: conftest.py  exceptions_test.py  htmlutils_test.py  loader_test.py  urlutils_test.py
tests/fixtures/: local_page.html  raw.html  remote_page.html
