[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Downloads html pages"
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "page_loader"},
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
requests-mock = "^1.10.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.8.0"
bandit = "^1.7.4"
safety = "^2.1.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.main:main"